projects/los-retail/auto-approve/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auto-approve
  name: auto-approve
  namespace: los-retail-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-approve
  template:
    metadata:
      labels:
        app: auto-approve
    spec:
      containers:
        - image: registry.coherent.in/auto-approve-los:22
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: auto-approve
          # startupProbe:
          #   httpGet:
          #     path: /actuator/health
          #     port: 7030
          #   failureThreshold: 30
          #   periodSeconds: 10
      imagePullSecrets:
        - name: registry-regcred
