projects/los-retail/auto-approve/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auto-approve
  name: auto-approve-svc
  namespace: los-retail-dev
spec:
  ports:
    - port: 6030
      protocol: TCP
      targetPort: 6030
  selector:
    app: auto-approve
